rust/tests/snapshots/help/metrics__activate.snap
---
source: tests/cli/snapshots.rs
---
Activate a draft metric

Usage: vendo metrics activate [OPTIONS] <metricId>

Arguments:
  <metricId>  

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo metrics activate <metricId>
